# surrealdb-migrate

./: .editorconfig  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE_MIT  README.md  docker-compose.yml  justfile  rustfmt.toml  test.env
.github/workflows/: ci.yml  coverage.yml
.ide-settings/jetbrains/runConfigurations/: Build.run.xml  Clippy.run.xml  Coverage.run.xml  Run example run_migrations.run.xml  Test cli.run.xml  Test db-client.run.xml  Test lib.run.xml  Test migrate.run.xml  Test.run.xml
database-migration/: CHANGELOG.md  Cargo.toml  README.md
database-migration-files/: CHANGELOG.md  Cargo.toml  README.md
database-migration-files/src/: lib.rs  tests.rs
database-migration-files/tests/: version_numbers.rs
database-migration/src/: config.rs  error.rs  lib.rs  proptest_support.rs  repository.rs  result.rs  test_dsl.rs
database-migration/src/action/: mod.rs  tests.rs
database-migration/src/checksum/: mod.rs
database-migration/src/definition/: mod.rs  tests.rs
database-migration/src/migration/: mod.rs  tests.rs
database-migration/tests/: version_numbers.rs
examples/: run_migrations.rs
examples/examples_database/: mod.rs
fixtures/basic/migrations/: 20250103_140520_define_quote_table.surql
fixtures/with_down_migrations/migrations/: 20250103_140520_define_quote_table.down.surql  20250103_140520_define_quote_table.up.surql  20250103_140521_create_some_quotes.down.surql
fixtures/with_subdir/migrations/: 20250103_140521_create_some_quotes.surql
src/: config.rs  error.rs  lib.rs  proptest_support.rs  test_dsl.rs
src/checksum/: mod.rs  tests.rs
src/db/: mod.rs  tests.rs
src/definition/: mod.rs  tests.rs
src/fs/: mod.rs  tests.rs
src/io/: mod.rs  tests.rs
src/logic/: mod.rs  tests.rs
src/migration/: mod.rs
src/runner/: mod.rs
surql/: define_migrations_table.surql
surrealdb-migrate/: Cargo.toml
surrealdb-migrate-cli/: Cargo.toml
surrealdb-migrate-cli/src/: args.rs  create_cmd.rs  list_cmd.rs  main.rs  migrate_cmd.rs  revert_cmd.rs  runner.rs  tables.rs  verify_cmd.rs
surrealdb-migrate-cli/tests/: cli_tests.rs  create_cmd.rs  help_cmd.rs  list_cmd.rs  migrate_cmd.rs  revert_cmd.rs  verify_cmd.rs  version.rs  version_opt.rs
surrealdb-migrate-cli/tests/cmd/: help_cmd.toml  help_opt.toml  help_short_opt.toml  no_args.toml
surrealdb-migrate-cli/tests/create_cmd/: create_migration_including_down_migration.stdout  create_migration_with_an_invalid_key_as_argument.stderr  create_migration_with_current_date_and_time_and_a_given_title.stdout  create_migration_with_current_date_and_time_and_no_title.stdout  create_migration_with_given_key_and_a_given_title.stdout
surrealdb-migrate-cli/tests/fixtures/: mod.rs
surrealdb-migrate-cli/tests/fixtures/db/: mod.rs  prepare_test_playground.surql
surrealdb-migrate-cli/tests/fixtures/files/: mod.rs
surrealdb-migrate-cli/tests/help_cmd/: help.stdout
surrealdb-migrate-cli/tests/list_cmd/: applied_backward_migrations_one_applied.stdout  applied_forward_and_backward_migrations_one_applied.stdout  applied_migrations_one_applied.stdout  backward_migrations_none_applied.stdout  forward_and_backward_migrations_none_applied.stdout  forward_and_backward_migrations_one_applied.stdout  forward_migrations_none_applied.stdout  forward_migrations_one_applied.stdout  in_empty_directory.stdout  open_backward_migrations_one_applied.stdout  open_forward_and_backward_migrations_one_applied.stdout  open_migrations_one_applied.stdout  surrealdb-migrate.toml
surrealdb-migrate-cli/tests/migrate_cmd/: empty_database.stdout  empty_database_up_to_20250103_140520.stdout  empty_database_up_to_empty_key.stderr  empty_database_up_to_invalid_key.stderr  fully_migrated_database.stdout  partially_migrated_database.stdout
surrealdb-migrate-cli/tests/revert_cmd/: empty_database.stdout  fully_migrated_database.stdout  fully_migrated_database_down_to_20250103_140520.stdout  fully_migrated_database_down_to_missing_key.stderr  partially_migrated_database.stdout
surrealdb-migrate-cli/tests/verify_cmd/: checksum_only_one_migration_changed_one_migration_out_of_order.stdout  empty_migrations_folder.stdout  fully_migrated_database_no_problematic_migrations.stdout  one_migration_changed_one_migration_out_of_order.stdout  order_only_one_migration_changed_one_migration_out_of_order.stdout
surrealdb-migrate-config/: Cargo.toml
surrealdb-migrate-config/fixtures/custom_config_dir/: surrealdb-migrate.toml
surrealdb-migrate-config/fixtures/db_client_config/: surrealdb-migrate.toml
surrealdb-migrate-config/fixtures/runner_config/: surrealdb-migrate.toml
surrealdb-migrate-config/resources/: default.env  surrealdb-migrate.default.toml
surrealdb-migrate-config/src/: env.rs  lib.rs  tests.rs
surrealdb-migrate-db-client/: Cargo.toml
surrealdb-migrate-db-client/src/: lib.rs  tests.rs
surrealdb-migrate-db-client/tests/: apply_and_revert_migrations.rs  apply_migrations.rs  connect_to_database.rs  migrations_table.rs
surrealdb-migrate-db-client/tests/fixtures/: mod.rs
surrealdb-migrate-db-client/tests/fixtures/db/: mod.rs
surrealdb-migrate/examples/: run_migrations.rs
surrealdb-migrate/examples/examples_database/: mod.rs  prepare_examples_playground.surql
surrealdb-migrate/src/: lib.rs
surrealdb-migrate/src/runner/: mod.rs  tests.rs
surrealdb-migrate/tests/: migration_runner.rs  version_numbers.rs
surrealdb-migrate/tests/fixtures/: mod.rs
surrealdb-migrate/tests/fixtures/db/: mod.rs
tests/: apply_migrations.rs  connect_to_database.rs  migrations_table.rs
tests/fixtures/: mod.rs
tests/fixtures/db/: mod.rs
tests/test_dsl/: mod.rs
