[workspace]
members = [
    "database-migration",
    "database-migration-files",
    "surrealdb-migrate-db-client",
    "surrealdb-migrate-config",
    "surrealdb-migrate",
    "surrealdb-migrate-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["haraldmaida"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0"
repository = "https://github.com/innoave/surrealdb-migrate"
readme = "README.md"

[workspace.dependencies]
# workspace dependencies
database-migration = { version = "0.1", path = "database-migration" }
database-migration-files = { version = "0.1", path = "database-migration-files" }
surrealdb-migrate-db-client = { version = "0.1", path = "surrealdb-migrate-db-client" }
surrealdb-migrate-config = { version = "0.1", path = "surrealdb-migrate-config" }
surrealdb-migrate = { version = "0.1", path = "surrealdb-migrate" }

# 3rd party dependencies
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cli-table = { version = "0.4", default-features = false, features = ["derive"] }
color-eyre = "0.6"
config = { version = "0.15", default-features = false, features = ["toml"] }
crc32fast = "1"
enumset = "1"
indexmap = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
simplelog = { version = "0.12", default-features = false, features = ["local-offset"] }
surrealdb = { version = "2.3", default-features = false }
thiserror = "2"
tokio = { version = "1", features = ["macros"] }

# dev-dependencies
anyhow = "1"
assert_fs = "1"
assertor = "0.0.3"
dotenvy = "0.15"
proptest = { version = "1", default-features = false, features = ["std"] }
serial_test = "3"
snapbox = "0.6"
testcontainers-modules = "0.12"
version-sync = { version = "0.9", default-features = false, features = ["markdown_deps_updated", "html_root_url_updated"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
bare_trait_objects = "warn"
deprecated = "warn"
explicit_outlives_requirements = "warn"
noop_method_call = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
dead_code = "warn"
#missing_docs = "warn"  # uncomment when working on docs
#variant_size_differences = "warn"  # enable when working on performance

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
enum_glob_use = "deny"
future_not_send = "allow"
if_not_else = "allow"
missing_const_for_fn = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
unwrap_used = "deny"
missing_errors_doc = "allow"  # remove when working on docs
missing_panics_doc = "allow"  # remove when working on docs

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[profile.dev.build-override]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.proptest]
overflow-checks = false

[profile.dev.package."*"]
opt-level = 1
