[package]
name = "surrealdb-migrate-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

description = """
Command line application to evolve a SurrealDB database over time by applying migrations. It
provides version control for a SurrealDB database in a project.
"""
keywords = ["database", "migrations", "version-control", "cli", "surrealdb"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "surmig"
path = "src/main.rs"

[features]
default = ["protocol-ws", "rustls"]

# re-exported features of the `surrealdb` crate
native-tls = ["surrealdb-migrate/native-tls"]
protocol-http = ["surrealdb-migrate/protocol-http"]
protocol-ws = ["surrealdb-migrate/protocol-ws"]
rustls = ["surrealdb-migrate/rustls"]

[dependencies]
# workspace dependencies
surrealdb-migrate = { workspace = true, features = ["config"] }

# 3rd party dependencies
chrono.workspace = true
clap.workspace = true
cli-table.workspace = true
color-eyre.workspace = true
tokio.workspace = true

[dev-dependencies]
database-migration = { workspace = true, features = ["test-dsl"] }
surrealdb-migrate-db-client.workspace = true
assert_fs.workspace = true
assertor.workspace = true
dotenvy.workspace = true
snapbox.workspace = true
testcontainers-modules = { workspace = true, features = ["surrealdb"] }

[lints]
workspace = true
