[package]
name = "surrealdb-migrate-config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true

description = """
Configuration of `surrealdb-migrate` using environment variables and/or config files.
"""
keywords = ["database", "migrations", "version-control", "surrealdb"]
categories = ["database"]

[dependencies]
# workspace dependencies
database-migration.workspace = true

# 3rd party dependencies
config.workspace = true
serde.workspace = true

[dev-dependencies]
assertor.workspace = true

[lints]
workspace = true
