[package]
name = "surrealdb-migrate-db-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

description = """
Database client for the `surrealdb-migrate` crate to migrate SurrealDB instances.
"""
keywords = ["database", "migrations", "version-control", "surrealdb"]
categories = ["database"]

[features]
default = ["protocol-ws", "rustls"]

# re-exported features of the `surrealdb` crate
native-tls = ["surrealdb/native-tls"]
protocol-http = ["surrealdb/protocol-http"]
protocol-ws = ["surrealdb/protocol-ws"]
rustls = ["surrealdb/rustls"]

[dependencies]
# workspace dependencies
database-migration.workspace = true

# 3rd party dependencies
chrono.workspace = true
serde.workspace = true
surrealdb.workspace = true

[dev-dependencies]
database-migration = { workspace = true, features = ["test-dsl"] }
assertor.workspace = true
dotenvy.workspace = true
testcontainers-modules = { workspace = true, features = ["surrealdb"] }
tokio.workspace = true

[lints]
workspace = true
