[package]
name = "surrealdb-migrate"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

description = """
Evolve a SurrealDB database over time by applying migrations. `surrealdb-migrate` is a library for
defining and running migrations on a database. It provides version control for a SurrealDB database
in a project.
"""
keywords = ["database", "migrations", "version-control", "surrealdb"]
categories = ["database"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["protocol-ws", "rustls"]
config = ["dep:surrealdb-migrate-config"]

# re-exported features of the `surrealdb` crate
native-tls = ["surrealdb-migrate-db-client/native-tls"]
protocol-http = ["surrealdb-migrate-db-client/protocol-http"]
protocol-ws = ["surrealdb-migrate-db-client/protocol-ws"]
rustls = ["surrealdb-migrate-db-client/rustls"]

[dependencies]
# workspace dependencies
database-migration.workspace = true
database-migration-files.workspace = true
surrealdb-migrate-db-client.workspace = true

# optional
surrealdb-migrate-config = { workspace = true, optional = true }

# 3rd party dependencies
chrono.workspace = true
indexmap.workspace = true
log.workspace = true

[dev-dependencies]
database-migration = { workspace = true, features = ["test-dsl"] }
assert_fs.workspace = true
assertor.workspace = true
color-eyre.workspace = true
dotenvy.workspace = true
testcontainers-modules = { workspace = true, features = ["surrealdb"] }
tokio.workspace = true

[lints]
workspace = true
